Adds pagination and archive collection
